fix card image size and align cards

--- a/style.css
+++ b/style.css
@@ -43,9 +43,11 @@ body {
   background-color: #ede9df;
   border-radius: 10px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  margin-top: 50px;
 }
 .foodCard img {
   width: 100%;
+  height: 240px;
   border-radius: 10px;
 }
 .foodCard h2 {
@@ -66,6 +68,12 @@ body {
 .foodCard p {
   font-size: 1.2rem;
   font-weight: 500;
+}
+.restaurantCard {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 100%;
 }
 @media (max-width: 768px) {
   .navbar .logo {
